--- a/payeredge.html
+++ b/payeredge.html
@@ -156,20 +156,16 @@
 
     /* ================== Config & utils ================== */
 
-    // Tries both filenames in both locations. First one that loads wins.
     const CSV_CANDIDATES = [
-  './vsp_choice_master_v8.3.csv',
-  './data/vsp_choice_master_v8.3.csv'
-];
+      './vsp_choice_master_v8.3.csv',
+      './data/vsp_choice_master_v8.3.csv'
+    ];
 
-    const BETTER_CAP_OF_MAX = 0.75; // ≤75% of max copay
-    const GOOD_CAP_OF_MAX   = 0.50; // ≤50% of max copay
-    const CAP_RELAX_FACTOR  = 0.90; // fallback relaxer
+    const BETTER_CAP_OF_MAX = 0.75;
+    const GOOD_CAP_OF_MAX   = 0.50;
+    const CAP_RELAX_FACTOR  = 0.90;
 
-    // Optional safety net if some A-base is still missing from CSV (leave empty now)
-    const BASE_OVERRIDES = {
-      // Example: NA: { copay: 175, chargeback: 95 }
-    };
+    const BASE_OVERRIDES = { };
 
     const el = (id)=>document.getElementById(id);
     const sum = (a)=>a.reduce((x,y)=>x+y,0);
@@ -179,8 +175,10 @@
 
     const isDCode  = r => /^d/i.test((r.code||'').trim());
     const isPPhoto = r => /^p(m|r)/i.test((r.code||'').trim());
-    const isGlassBase = row => /glass/i.test(N(row?.enhancement || row?.subtype || ''));
-    const preferPhotoCodeForBase = row => (isGlassBase(row) ? 'PM' : 'PR');
+    const isGlassBaseName = name => /glass/.test(N(name||''));
+    const isGlassRow = r => isGlassBaseName(r.enhancement || r.subtype || '');
+
+    const preferPhotoCodeForBase = row => (isGlassRow(row) ? 'PM' : 'PR');
 
     const splitCodes = (s)=> String(s||'')
       .toUpperCase().replace(/[^\w+&/,\s-]/g,'')
@@ -189,6 +187,19 @@
     function parseCopayNumbers(copayStr){
       const m = String(copayStr||'').match(/[0-9]+(?:\.[0-9]{1,2})?/g);
       return m ? m.map(x=>parseFloat(x)) : [];
+    }
+
+    // Parse "Copay = 45+28 (SV) / 55+28 (MF)" from notes
+    function parseSplitFromNotes(notes){
+      const s = String(notes||'');
+      const sv = s.match(/(\d+)\s*\+\s*(\d+)\s*\(SV\)/i);
+      const mf = s.match(/(\d+)\s*\+\s*(\d+)\s*\(MF\)/i);
+      return {
+        svBase: sv ? num(sv[1]) : null,
+        svAdd : sv ? num(sv[2]) : null,
+        mfBase: mf ? num(mf[1]) : null,
+        mfAdd : mf ? num(mf[2]) : null
+      };
     }
 
     function parseCSV(text){
@@ -325,6 +336,7 @@
       const desc = row.enhancement || row.subtype || '—';
       const codeStr = String(row.code||'').trim().toUpperCase();
       const partsCodes = splitCodes(codeStr);
+      const notes = row.notes || row.note || row.Notes || row.NOTE || '';
 
       // Single-code line
       if (partsCodes.length === 1){
@@ -333,30 +345,35 @@
       }
 
       // Composite
-      const compositeCopayNums = parseCopayNumbers(row.copay); // e.g., [175,35] or [210]
+      const fam = el('lensFamily').value;
+      const split = parseSplitFromNotes(notes);
+
+      const compositeCopayNums = parseCopayNumbers(row.copay);
       const compositeTotalCopay = num(row.copay);
       const compositeAddOnCB = num(row.chargeback);
 
       const parts = [];
 
-      // Base part from exact A-code row (or override if truly missing)
+      // Base part
       const baseCode = partsCodes[0];
       const baseRow  = pickBaseByExactCode(baseCode);
       let baseCop  = baseRow ? num(baseRow.copay)      : (compositeCopayNums[0] ?? compositeTotalCopay);
       let baseCB   = baseRow ? num(baseRow.chargeback) : 0;
-      if (!baseRow && BASE_OVERRIDES[baseCode]) {
-        baseCop = BASE_OVERRIDES[baseCode].copay;
-        baseCB  = BASE_OVERRIDES[baseCode].chargeback;
-      }
+
+      if (fam !== 'PAL' && split.svBase != null) baseCop = split.svBase;
+      if (fam === 'PAL' && split.mfBase != null) baseCop = split.mfBase;
+
       parts.push({ code:baseCode, copay:baseCop, chargeback:baseCB, profit:baseCop-baseCB });
 
       // Add-ons
       const addonCount = partsCodes.length - 1;
-
-      // Copays for add-ons
       let addonCopays = [];
-      if (compositeCopayNums.length >= partsCodes.length){
-        addonCopays = compositeCopayNums.slice(1); // explicit splits if present
+
+      let explicitAdd = (fam !== 'PAL') ? split.svAdd : split.mfAdd;
+      if (explicitAdd != null) {
+        addonCopays = [explicitAdd, ...Array(Math.max(0, addonCount-1)).fill(0)];
+      } else if (compositeCopayNums.length >= partsCodes.length){
+        addonCopays = compositeCopayNums.slice(1);
       } else {
         const remaining = Math.max(compositeTotalCopay - baseCop, 0);
         if (addonCount <= 1){
@@ -367,7 +384,6 @@
         }
       }
 
-      // Holdback for add-ons from the composite row
       const addonCBEach = addonCount <= 1 ? compositeAddOnCB : (compositeAddOnCB / addonCount);
 
       for (let i=1;i<partsCodes.length;i++){
@@ -517,11 +533,15 @@
     function chooseSunFor(baseRow) {
       const tintSel = el('lensTint').value;
       if (tintSel==='clear' || tintSel==='polarized') return null;
+
+      // Respect Glass exclusivity for sun too: if base is glass, only allow glass-photochromic if such codes exist.
       const fam = el('lensFamily').value;
+      const wantGlass = el('includeGlass').checked;
+
       const sunAll = byKey('sun_tech').filter(r=>applies(r,fam)).filter(r=>{
         const n=N(r.enhancement);
-        if(!el('includeGlass').checked && n.includes('glass')) return false;
-        return true;
+        if (wantGlass) return /glass/.test(n);
+        return !/glass/.test(n);
       });
 
       if (tintSel==='transitions') {
@@ -551,38 +571,82 @@
       const wantGlass = el('includeGlass').checked;
       const tintSel = el('lensTint').value;
 
-      const sunAll = byKey('sun_tech').filter(r=>applies(r,fam)).filter(r=>{
-        const n=N(r.enhancement);
-        if(!wantGlass && n.includes('glass')) return false;
-        return true;
-      });
-
       const isCustomMeasure = (row) => /custom\s*measure/i.test(N(row?.enhancement || row?.subtype || ''));
-      const customPool = DATA.filter(r => applies(r, 'PAL')).filter(isCustomMeasure);
+
+      // Helper: classify aspheric vs non-aspheric for SV/LINED
+      function isAA(row){ return splitCodes(row.code)[0] === 'AA'; }
+      function isAsphericRow(row){
+        const name = N(row.enhancement || row.subtype || '');
+        const first = splitCodes(row.code)[0] || '';
+        const looksAspheric = /aspheric/.test(name) || /^BA\b/.test(first);
+        return looksAspheric && !isAA(row); // AA is explicitly NON-aspheric
+      }
 
       // Base candidates
       let base = [];
       if (fam === 'PAL') {
         base = byKey('progressive_level').filter(r=>applies(r,fam)).filter(r=>{
           const name=N(r.enhancement);
-          if(!wantAsp && name.includes('aspheric')) return false;
-          if(!wantGlass && name.includes('glass'))  return false;
+          // Glass exclusivity
+          if (wantGlass && !isGlassBaseName(name)) return false;
+          if (!wantGlass && isGlassBaseName(name)) return false;
+
           if(isCustomMeasure(r)) return false;
-          if (tintSel==='polarized') return /polariz/.test(name); // polarized as material
+          if (tintSel==='polarized') return /polariz/.test(name); // polarized-as-material if it exists
           return !/(photochrom|polariz|tint|tinted|sunglass|gradient)/.test(name);
         });
+
+        // Ensure KA shows (when not Glass-only)
+        if (!wantGlass) {
+          const kaRow = pickBaseByExactCode('KA');
+          if (kaRow && !base.some(r => splitCodes(r.code)[0] === 'KA')) base.push(kaRow);
+        }
+
       } else {
+        // Non-PAL: SV or LINED
         if (tintSel==='polarized') {
-          base = sunAll.filter(r => /polariz/.test(N(r.enhancement)) && isDCode(r));
+          // If Glass is required, keep only glass-polarized bases (usually none)
+          if (wantGlass) {
+            base = byKey('sun_tech').filter(r=>{
+              const n=N(r.enhancement);
+              return applies(r,fam) && /polariz/.test(n) && /glass/.test(n);
+            });
+          } else {
+            base = byKey('sun_tech').filter(r=>{
+              const n=N(r.enhancement);
+              return applies(r,fam) && /polariz/.test(n) && isDCode(r) && !/glass/.test(n);
+            });
+          }
         } else {
-          const pool = (fam==='SV' ? byKey('base_material') : byKey('occupational'));
-          base = pool.filter(r=>applies(r,fam)).filter(r=>{
+          // Start with material pool
+          let pool = (fam==='SV' ? byKey('base_material') : byKey('occupational'));
+
+          // Glass exclusivity on base pool
+          pool = pool.filter(r=>{
             const name=N(r.enhancement);
-            if(!wantAsp && name.includes('aspheric')) return false;
-            if(!wantGlass && name.includes('glass'))  return false;
-            if(/photochrom|polariz|tint|tinted|sunglass|gradient/.test(name)) return false;
+            if (wantGlass && !isGlassBaseName(name)) return false;
+            if (!wantGlass && isGlassBaseName(name)) return false;
             return true;
           });
+
+          // Filter by aspheric toggle (only when not Glass; glass bases ignore Aspheric switch)
+          pool = pool.filter(r=>{
+            const name=N(r.enhancement);
+            if(/photochrom|polariz|tint|tinted|sunglass|gradient/.test(name)) return false;
+            if (wantGlass) return true; // already glass-only
+            const asph = isAsphericRow(r);
+            return wantAsp ? asph : !asph;
+          });
+
+          // When Aspheric OFF and SV/Clear and NOT Glass → put AA first
+          if (!wantGlass && !wantAsp && fam==='SV' && tintSel==='clear') {
+            const aaRow = pickBaseByExactCode('AA');
+            if (aaRow) {
+              const notAA = pool.filter(r => splitCodes(r.code)[0] !== 'AA');
+              pool = [aaRow, ...notAA];
+            }
+          }
+          base = pool;
         }
       }
 
@@ -591,19 +655,28 @@
         const gradeVal = (s)=>{ const m=String(s||'').match(/\b([A-D])\b/i); if(!m) return null; return {A:1,B:2,C:3,D:4}[m[1].toUpperCase()]||null; };
         return [...ars].sort((a,b)=>{
           const ga=gradeVal(a.enhancement)||-1, gb=gradeVal(b.enhancement)||-1;
-          if(ga!==gb) return gb-ga; // prefer A
+          if(ga!==gb) return gb-ga;
           const pa=num(a.copay)-num(a.chargeback);
           const pb=num(b.copay)-num(b.chargeback);
           return pb-pa;
         });
       }
-      const arPool = wantAR ? byKey('ar_level').filter(r=>applies(r,fam)) : [];
+      const arPool = wantAR ? byKey('ar_level').filter(r=>{
+        const name=N(r.enhancement);
+        if (wantGlass && !isGlassBaseName(name)) return false; // AR options that are glass-only (rare); otherwise AR is independent, so allow all
+        return applies(r,fam);
+      }) : [];
       const arRanked = wantAR ? rankAR(arPool) : [];
       const arOptions = wantAR && arRanked.length ? arRanked : [null];
 
       const overs = wantOS ? (byKey('oversize').filter(r=>applies(r,fam))[0] || null) : null;
 
-      function buildBundle(m, arRow){ return makeBundle(m, [arRow, chooseSunFor(m), (el('includeCM')?.checked && fam==='PAL') ? (customPool[0]||null) : null, overs]); }
+      function buildBundle(m, arRow){
+        // Sun add-ons respect Glass exclusivity inside chooseSunFor()
+        const cm = (el('includeCM')?.checked && fam==='PAL') ? (DATA.filter(r => applies(r, 'PAL')).find(isCustomMeasure) || null) : null;
+        return makeBundle(m, [arRow, chooseSunFor(m), cm, overs]);
+      }
+
       const all = [];
       for(const m of base){ for(const ar of arOptions){ all.push(buildBundle(m, ar)); } }
       if (!all.length){
