--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
         <label class="switch">Lens tint
           <select id="lensTint" aria-label="Lens tint">
             <option value="clear" selected>Clear</option>
-            <option value="tinted">Tinted</option>
+            <option value="tinted_solid">Tinted — Solid</option>
+            <option value="tinted_gradient">Tinted — Gradient</option>
             <option value="polarized">Polarized</option>
             <option value="transitions">Transitions®</option>
           </select>
@@ -131,9 +132,9 @@
     <div id="stack" class="stack"></div>
   </main>
 
-  <!-- error overlay guard -->
+  <!-- Error overlay for runtime issues -->
   <script>
-    if (!window.__PAYEREDGE_V16__) {
+    if (!window.__PAYEREDGE_V16_TINTS__) {
       (function(){
         function showErrorOverlay(err, where){
           const wrap = document.createElement('div');
@@ -149,10 +150,10 @@
   </script>
 
   <script>
-  if (window.__PAYEREDGE_V16__) {
+  if (window.__PAYEREDGE_V16_TINTS__) {
     console.warn('PayerEdge script already loaded; skipping second init.');
   } else {
-    window.__PAYEREDGE_V16__ = true;
+    window.__PAYEREDGE_V16_TINTS__ = true;
 
     /* ================== Config & utils ================== */
 
@@ -163,7 +164,7 @@
 
     const BETTER_CAP_OF_MAX = 0.75; // ≤75% of max copay
     const GOOD_CAP_OF_MAX   = 0.50; // ≤50% of max copay
-    const CAP_RELAX_FACTOR  = 0.90; // fallback relaxer (only if no candidate at all)
+    const CAP_RELAX_FACTOR  = 0.90; // fallback relaxer
 
     const el = (id)=>document.getElementById(id);
     const sum = (a)=>a.reduce((x,y)=>x+y,0);
@@ -186,7 +187,6 @@
       return m ? m.map(x=>parseFloat(x)) : [];
     }
 
-    // Parse "Copay = 45+28 (SV) / 55+28 (MF)" from notes if present
     function parseSplitFromNotes(notes){
       const s = String(notes||'');
       const sv = s.match(/(\d+)\s*\+\s*(\d+)\s*\(SV\)/i);
@@ -222,7 +222,7 @@
     const clearCacheStorage=()=>{ localStorage.removeItem(CACHE_KEY); localStorage.removeItem(META_KEY); };
 
     let DATA=[];
-    let SIMPLE_BY_CODE = new Map(); // code -> array of single-code rows (not composites)
+    let SIMPLE_BY_CODE = new Map();
 
     function buildSimpleIndex(){
       SIMPLE_BY_CODE = new Map();
@@ -268,7 +268,7 @@
       }
 
       if (loaded){
-        const meta = { plan:'VSP_choice', version:new Date().toISOString().slice(0,10)+'.ui16', source:'network:'+loaded.url, sha:quickHash(loaded.text) };
+        const meta = { plan:'VSP_choice', version:new Date().toISOString().slice(0,10)+'.ui16-tints', source:'network:'+loaded.url, sha:quickHash(loaded.text) };
         setCache(loaded.text, meta);
         DATA = parseCSV(loaded.text);
         buildSimpleIndex();
@@ -324,23 +324,19 @@
       const partsCodes = splitCodes(codeStr);
       const notes = row.notes || row.note || row.Notes || row.NOTE || '';
 
-      // Single-code line
       if (partsCodes.length === 1){
         const cop = num(row.copay), cb = num(row.chargeback);
         return { name:desc, code:codeStr, copay:cop, chargeback:cb, profit:cop-cb, parts:[] };
       }
 
-      // Composite
       const fam = el('lensFamily').value;
       const split = parseSplitFromNotes(notes);
-
       const compositeCopayNums = parseCopayNumbers(row.copay);
       const compositeTotalCopay = num(row.copay);
       const compositeAddOnCB = num(row.chargeback);
 
       const parts = [];
 
-      // Base part from exact A-code row (or from notes)
       const baseCode = partsCodes[0];
       const baseRow  = pickBaseByExactCode(baseCode);
       let baseCop  = baseRow ? num(baseRow.copay)      : (compositeCopayNums[0] ?? compositeTotalCopay);
@@ -351,7 +347,6 @@
 
       parts.push({ code:baseCode, copay:baseCop, chargeback:baseCB, profit:baseCop-baseCB });
 
-      // Add-ons
       const addonCount = partsCodes.length - 1;
 
       let addonCopays = [];
@@ -359,7 +354,7 @@
       if (explicitAdd != null) {
         addonCopays = [explicitAdd, ...Array(Math.max(0, addonCount-1)).fill(0)];
       } else if (compositeCopayNums.length >= partsCodes.length){
-        addonCopays = compositeCopayNums.slice(1); // explicit splits if present
+        addonCopays = compositeCopayNums.slice(1);
       } else {
         const remaining = Math.max(compositeTotalCopay - baseCop, 0);
         if (addonCount <= 1){
@@ -519,27 +514,51 @@
     function chooseSunFor(baseRow) {
       const tintSel = el('lensTint').value;
       if (tintSel==='clear' || tintSel==='polarized') return null;
+
       const fam = el('lensFamily').value;
       const wantGlass = el('includeGlass').checked;
+
       const sunAll = byKey('sun_tech').filter(r=>applies(r,fam)).filter(r=>{
         const n=N(r.enhancement);
         if (wantGlass) return /glass/.test(n);
         return !/glass/.test(n);
       });
 
+      // Transitions®
       if (tintSel==='transitions') {
         const want = preferPhotoCodeForBase(baseRow); // PM for glass, else PR
         let pool = sunAll.filter(r => /photochrom/.test(N(r.enhancement)));
+        // prefer material-aligned code (PM vs PR), else any P*
         let choice = pool.find(r => new RegExp('^' + want, 'i').test((r.code || '').trim())) || pool.find(r=>isPPhoto(r));
         return choice || null;
       }
-      if (tintSel==='tinted') {
+
+      // Tinted — Solid vs Gradient
+      if (tintSel==='tinted_solid' || tintSel==='tinted_gradient') {
+        const wantGradient = (tintSel==='tinted_gradient');
+
+        // 1) filter by style
         let pool = sunAll.filter(r=>{
           const n=N(r.enhancement);
-          return sunMatchesBase(r, baseRow) && !/photochrom|polariz/.test(n) && /tint|tinted|solid|gradient|sunglass/.test(n);
+          const isTint = /tint|tinted|sunglass/.test(n);
+          const isGrad = /grad/i.test(n);
+          return isTint && (wantGradient ? isGrad : !isGrad);
+        });
+
+        // 2) material match the base
+        pool = pool.filter(r => sunMatchesBase(r, baseRow));
+
+        if (!pool.length) return null;
+
+        // 3) pick the highest-profit matching tint row
+        pool.sort((a,b)=>{
+          const pa = num(a.copay) - num(a.chargeback);
+          const pb = num(b.copay) - num(b.chargeback);
+          return pb - pa; // desc profit
         });
         return pool[0] || null;
       }
+
       return null;
     }
 
@@ -556,7 +575,6 @@
 
       const isCustomMeasure = (row) => /custom\s*measure/i.test(N(row?.enhancement || row?.subtype || ''));
 
-      // Helpers: AA is non-aspheric; BA* is aspheric (for SV/LINED)
       function isAA(row){ return splitCodes(row.code)[0] === 'AA'; }
       function isAsphericRow(row){
         const name = N(row.enhancement || row.subtype || '');
@@ -565,28 +583,21 @@
         return looksAspheric && !isAA(row);
       }
 
-      // Base candidates
       let base = [];
       if (fam === 'PAL') {
         base = byKey('progressive_level').filter(r=>applies(r,fam)).filter(r=>{
           const name=N(r.enhancement);
-          // Glass exclusivity
           if (wantGlass && !isGlassBaseName(name)) return false;
           if (!wantGlass && isGlassBaseName(name)) return false;
-
           if(isCustomMeasure(r)) return false;
-          if (tintSel==='polarized') return /polariz/.test(name); // polarized as material
+          if (tintSel==='polarized') return /polariz/.test(name);
           return !/(photochrom|polariz|tint|tinted|sunglass|gradient)/.test(name);
         });
-
-        // Ensure KA shows (when not Glass-only)
         if (!wantGlass) {
           const kaRow = pickBaseByExactCode('KA');
           if (kaRow && !base.some(r => splitCodes(r.code)[0] === 'KA')) base.push(kaRow);
         }
-
       } else {
-        // Non-PAL: SV or LINED
         if (tintSel==='polarized') {
           if (wantGlass) {
             base = byKey('sun_tech').filter(r=>{
@@ -600,27 +611,20 @@
             });
           }
         } else {
-          // Start with material pool
           let pool = (fam==='SV' ? byKey('base_material') : byKey('occupational'));
-
-          // Glass exclusivity
           pool = pool.filter(r=>{
             const name=N(r.enhancement);
             if (wantGlass && !isGlassBaseName(name)) return false;
             if (!wantGlass && isGlassBaseName(name)) return false;
             return true;
           });
-
-          // Filter by aspheric toggle (for non-glass pools)
           pool = pool.filter(r=>{
             const name=N(r.enhancement);
             if(/photochrom|polariz|tint|tinted|sunglass|gradient/.test(name)) return false;
-            if (wantGlass) return true; // already glass-only
+            if (wantGlass) return true;
             const asph = isAsphericRow(r);
             return wantAsp ? asph : !asph;
           });
-
-          // When Aspheric OFF and SV/Clear and NOT Glass → put AA first
           if (!wantGlass && !wantAsp && fam==='SV' && tintSel==='clear') {
             const aaRow = pickBaseByExactCode('AA');
             if (aaRow) {
@@ -632,12 +636,11 @@
         }
       }
 
-      // AR ranked by grade then profit
       function rankAR(ars){
         const gradeVal = (s)=>{ const m=String(s||'').match(/\b([A-D])\b/i); if(!m) return null; return {A:1,B:2,C:3,D:4}[m[1].toUpperCase()]||null; };
         return [...ars].sort((a,b)=>{
           const ga=gradeVal(a.enhancement)||-1, gb=gradeVal(b.enhancement)||-1;
-          if(ga!==gb) return gb-ga; // prefer A
+          if(ga!==gb) return gb-ga;
           const pa=num(a.copay)-num(a.chargeback);
           const pb=num(b.copay)-num(b.chargeback);
           return pb-pa;
@@ -670,7 +673,6 @@
         return;
       }
 
-      // ===== New tier logic: no base-label exclusion, pure math + de-dup =====
       const MaxPrice = Math.max(...all.map(b => b.copay));
 
       const best = all.reduce((p,c)=> ( !p || c.profit>p.profit || (c.profit===p.profit && c.copay<p.copay) ? c : p ), null);
@@ -680,23 +682,19 @@
         if (cand.length) {
           return cand.reduce((p,c)=> ( !p || c.profit>p.profit || (c.profit===p.profit && c.copay<p.copay) ? c : p ), null);
         }
-        // relax once if literally nothing fits
         const looser = cap / CAP_RELAX_FACTOR;
         const cand2 = all.filter(b => b.copay <= looser);
         if (cand2.length) {
           return cand2.reduce((p,c)=> ( !p || c.profit>p.profit || (c.profit===p.profit && c.copay<p.copay) ? c : p ), null);
         }
-        // absolute fallback: cheapest overall
         return all.reduce((p,c)=> ( !p || c.copay<p.copay || (c.copay===p.copay && c.profit>p.profit) ? c : p ), null);
       }
 
       const better = pickUnderCap(MaxPrice*BETTER_CAP_OF_MAX);
       const good   = pickUnderCap(MaxPrice*GOOD_CAP_OF_MAX);
-
-      // Cheapest = absolute floor
       const cheapest = all.reduce((p,c)=> ( !p || c.copay<p.copay || (c.copay===p.copay && c.profit>p.profit) ? c : p ), null);
 
-      // De-duplicate identical cards by signature
+      // De-dup identical renders
       const picks = [best, better, good, cheapest].filter(Boolean);
       const uniq = [];
       const seen = new Set();
